# Multi-modal-Data-Alignment

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: default_ci.yml  default_cicd.yaml  ruff.yml  unittest.yml
bash_scripts/: KITTI_script.sh  btc_script.sh  cosmos_script.sh  flickr_script.sh  handwriting_script.sh  imagenet_script.sh  leafy_script.sh  msrvtt_script.sh  musiccaps_script.sh  pitts_script.sh  sop_script.sh  tiil_script.sh
config/: __init__.py  linear.yaml  main.yaml
mmda/: __init__.py  any2any_conformal_retrieval.py  any2any_retrieval.py  bimodal_classification.py  bimodal_mislabeled_data.py  bimodal_ooc_detection.py  bimodal_retrieval.py  bimodal_shuffled_data.py  compare_mislabeled_embed.py  csa_example.ipynb  data_align.py  data_real_align.py  data_shuffle_align.py  download_musiccaps_dataset.py  get_embeddings.py  get_llava_caption.py  handwriting_baseline.py  inspect_outlier.py  linear_svm_clip.py  llava_img_text_align.py  pairwise_spearman_coeff.py  plot.py  plot_kitti_cross_retrieval.py  plot_nonconformity.ipynb  plot_single_modal.py  query_llava.py  simple_linear_exp.py  sop_print_text.py  spearman_coeff.py  test.py  test_clap.py  tsfresh_features.py  tsne_csa.py
mmda/audiocaps_scripts/: download_dataset.py
mmda/baselines/: __init__.py  asif_core.py  emma_kitti_class.py
mmda/baselines/emma/: __init__.py  emma_kitti_class.py  emma_msrvtt_class.py
mmda/benchmark/: asif_core.py
mmda/config/: audiocaps.yaml  musiccaps.yaml  sop.yaml  wikimute.yaml
mmda/exps/: __init__.py  any2any_retrieval.py  classification.py  data_mislabel_align.py  data_shuffle_align.py  hier_ooc.py  linear_encoder.py  llava_alignment.py  mislabel_align.py  multimodal_retrieval.py  retrieval.py  shuffle_align.py  spearman_coeff.py
mmda/liploc/dataloaders/: Kitti360Dataset.py  KittiBothDataset.py  KittiDataset.py  KittiTripletDataset.py  __init__.py
mmda/liploc/models/: CLIPModelV1.py  CLIPModelV1Norm.py  CLIPModelV1_vit.py  CLIPModelV1_vit_768.py  TripletModelBasic.py  TripletModelBasicHard.py  TripletModelVanilla.py  TripletModelVanilla_vit.py  __init__.py
mmda/liploc/utils/: __init__.py  model_utils.py  rangeimage_utils.py
mmda/musiccaps_scripts/: audio_text_align.py  download_dataset.py  run_musiccaps_script.sh  test_clap.py  text_audio_emb.py
mmda/sop_scripts/: run_sop_script.sh  sop_class_image_text_align.py  sop_image_text_align.py  sop_img_emb.py  sop_llava_align.py  sop_merge_roc.py  sop_obj_image_text_align.py  sop_print_text.py  sop_query_llava.py  sop_text_emb.py
mmda/unused/: PCAvsCCA.py  PCAvsCCA_img.py  SVM_classifier.py  parse95_gt.py  parse_cat_gt.py  parse_gt.py
mmda/utils/: SVM_classifier.py  __init__.py  any2any_ds_class.py  any2any_ds_class___.py  audio_utils.py  btc_ds_class.py  btx_ds_class.py  calibrate.py  cca.py  cca_class.py  cca_utils.py  classification_dataset_class.py  data_utils.py  dataset_utils.py  embed_data.py  emma_ds_class.py  get_embeddings.py  hydra_utils.py  imagebind_utils.py  kitti_ds_class.py  linear_utils.py  liploc_model.py  llava_utils.py  mstvtt_ds_class.py  ooc_dataset_class.py  query_llava.py  retrieval_dataset_class.py  roc_utils.py  sim_utils.py  spearman_utils.py  video_audio_utils.py
mmda/wikimute_scripts/: download_dataset.py  test_clap.py
scripts/: bimodal_data_align.py  bimodal_mislabeled_data.py  bimodal_shuffled_data.py  cal_spearman_coeff.py  download_musiccaps_dataset.py  get_audio_img_text_emb.py  get_embeddings.py  get_llava_caption.py  inspect_outlier.py  llava_align.py  llava_img_text_align.py  parse_llava_alignment_result.py  query_llava.py  run_script.sh  sop_llava_align.py  sop_print_text.py  sop_query_llava.py  spearman_coeff.py  test.py  test_clap.py
sop_scripts/: sop_class_image_text_align.py  sop_image_text_align.py  sop_merge_roc.py  sop_obj_image_text_align.py
tests/subpackage_name/: test_subpackage_module_name.py
tife/: PCAvsCCA.py  PCAvsCCA_img.py  __init__.py  blending_img.ipynb  parse95_gt.py  parse_cat_gt.py  parse_gt.py  print_sop_text.py  run_script.sh  sop_class_image_text_align.py  sop_image_text_align.py  sop_llava_align.py  sop_merge_plots.py  sop_merge_roc.py  sop_obj_image_text_align.py  sop_query_llava.py
tife/config/: main_config.yaml  noise_config.yaml  sop.yaml
tife/sop_scripts/: print_sop_text.py  run_script.sh  sop_class_image_text_align.py  sop_image_text_align.py  sop_llava_align.py  sop_merge_roc.py  sop_obj_image_text_align.py  sop_query_llava.py
tife/unused/: PCAvsCCA.py  PCAvsCCA_img.py  parse_gt.py
tife/utils/: SVM_classifier.py  __init__.py  data_utils.py  linear_algebra_utils.py  load_data.py  sim_utils.py
unused/: PCAvsCCA_img.py  blending_img.ipynb  inspect_outlier.py  main_config.yaml  parse_cat_gt.py  parse_gt.py  retrieval_spearman_coeff.py  test_imgebind.py
your_project_name/subpackage_name/: subpackage_module_name.py
